--- a/app.json
+++ b/app.json
@@ -57,6 +57,9 @@
       "url": "https://github.com/HashNuke/heroku-buildpack-elixir"
     },
     {
+      "url": "https://github.com/heroku/heroku-buildpack-nodejs"
+    },
+    {
       "url": "https://github.com/gjaldon/heroku-buildpack-phoenix-static"
     }
   ]
